Updated page with better formatting

--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/resources/styles.css">
+        <link rel="stylesheet" href="../Portfolio/resources/styles.css">
+        <link rel="stylesheet" href="../resources/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&family=Russo+One&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
             <header>
-                    <h1>Portfolio</h1>
+                <div class="flex-header">
+                    <h2>About Me</h2>
+                    <h2>Projects</h2>
+                    <h2>Skills</h2>
+                    <h2>Contact</h2>
+                </div>
             </header>
             <main>
                 <div class="box a">
-                    <h2>Heading 1</h2>
+                    <h2>Hi, I'm</h2>
+                    <h2 class="name">Caleb </h2>
+                    <h2 class="name">Brace </h2>
+                    <h2>an aspiring developer who combines years of manufacturing management experience with a programming education to create sleek, and creative web Applications through user colaboration</h2>
+                    <h2 class="passion"></h2>
                 </div>
-                    <h2 class="">Stop</h2>
-                    <h2>start</h2>
-                    <h2>begin</h2>
+                <div class="box b">
+                    <h2 class=""></h2>
+                    <h2></h2>
+                    <h2></h2>
+                </div>
             </main>
         </div> 
     </body>
